main:fixes for owner
